# ogs-container-maker

./: .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  Jenkinsfile  Jenkinsfile.builder  LICENSE  README.md  Test.ipynb  build.py  build_common_definitions.py  build_jenkins_definitions.py  codemeta.json  config.py  ogs-builder.py  ogscm.py  pyproject.toml  requirements.txt  setup.py  spython_build.py
base/: config.py
building_blocks/: ccache.py  cppcheck.py  cvode.py  eigen.py  iwyy.py  jenkins_node.py  lmod.py  ogs.py  ogs_base.py  osu_benchmarks.py  petsc.py  pm_conan.py  pm_easybuild.py  pm_spack.py  scif.py  scif_app.py  vtk.py
config/: deploy_hosts_example.yml
files/spack/: packages.yaml
files/spack/spack-repo/: repo.yaml
ogscm/: __init__.py  args.py  build_common_definitions.py  build_jenkins_conan_definitions.py  build_jenkins_definitions.py  cli.py  cli_args.py  common.py  config.py  container_info.py  general_cli.py  jupyter.py  version.py
ogscm/app/: __init__.py  builder.py  deployer.py
ogscm/building_blocks/: __init__.py  ccache.py  cppcheck.py  cvode.py  eigen.py  iwyy.py  jenkins_node.py  lmod.py  ogs.py  ogs_base.py  osu_benchmarks.py  paraview.py  petsc.py  pm_conan.py  pm_easybuild.py  pm_spack.py  salome.py  vtk.py
ogscm/files/openmpi/: bw.c  hello.c  ring.c
ogscm/recipes/: __init__.py  _template.py  compiler.py  mpi-entrypoint.sh  mpi.py  ogs.py  ogs_jupyter.py  ogs_recipe.py  python_vtk.py  recipe_base.py
ogscm/recipes/files/: jupyterlab-gitlab_settings.json
recipes/: ogs-builder.py  salome.py
templates/: ConfigureCMake.py
